force-app/main/default/objects/Shift_Report__c/Shift_Report__c.object-meta.xml
<CustomObject>
    <description>This object is a header object that will contain the shift configuration details. Also this will be the starting point to produce shift reports.</description>
    <label>Shift Report</label>
    <nameField>
        <label>Shift Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shift Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>