force-app/main/default/objects/Shift_Report__c/fields/Send_Report_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Report_To__c</fullName>
    <label>Send Report To</label>
    <type>Email</type>
</CustomField>