force-app/main/default/objects/Shift_Report__c/fields/X1st_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>X1st_Shift_Start__c</fullName>
    <label>1st Shift Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>