force-app/main/default/objects/Shift_Report__c/fields/X2nd_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Shift_Start__c</fullName>
    <label>2nd Shift Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>