force-app/main/default/objects/Shift_Report__c/fields/X3rd_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Shift_Start__c</fullName>
    <label>3rd Shift Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>